# DS_Data-Driven-Stock-Analysis

./: .gitignore  Analysis.ipynb  Extract.ipynb  README.md  main.py  pyproject.toml  stock_analysis.pbix
cleaned_data/: sector.csv
helper/: dbhelper.py  helper.py
prediction/Cumulative_Return/: top_5_cumulative_return.csv  top_5_cumulative_return_final.csv
prediction/monthly_gainers_losers/: monthly_top5_gainers_losers_data.csv
prediction/sector_return/: average_sector_return_data.csv
prediction/volatility/: top_10_volatility.csv
view/: __init__.py  cumulative_return.py  monthly_gainers_losers.py  stock_correlation.py  stock_return.py  volatility.py
